Revision history for HarfBuzz-Shaper-Cairo

{{$NEXT}}

0.0.5  2022-06-29T11:04:01+12:00
    - Upload to zef ecosystem

0.0.4  2022-02-14T14:10:08+13:00
    - Adjust to HarfBuzz 0.0.11+ deprecations

0.0.3  2022-02-04T06:21:54+13:00
    - Fix name in META6.json

0.0.2  2022-02-04T06:16:50+13:00
    - Add class HarfBuzz::Font::Cairo

0.0.1  2021-02-20T08:04:58+13:00
    - Initial version