@@ -22,9 +22,12 @@ Synopsis
     my HarfBuzz::Shaper::Cairo $shaper2 .= new: :font{:$file}, :buf{:$text};
     $glyphs = $shaper2.cairo-glyphs;
     # -- FreeType integration --
-    use HarfBuzz::Font::Cairo;
-    my HarfBuzz::Font::Cairo $font .= new: :$file'
-    my HarfBuzz::Shaper::Cairo $shaper3 = $font.shaper: {:$text};
+    use Font::FreeType;
+    use Font::FreeType::Face;
+    use Harfbuzz::Shaper::Cairo::Font;
+    my Font::FreeType::Face $ft-face = Font::FreeType.face: $file;
+    my Harfbuzz::Shaper::Cairo::Font $font .= new: :$file;
+    my HarfBuzz::Shaper::Cairo $shaper3 .= $font.shaper: {:$text};
     $glyphs = $shaper3.cairo-glyphs;
 
 ### Description
@@ -38,7 +41,7 @@ Methods
 
 ### method cairo-glyphs
 
-```perl6
+```raku
 method cairo-glyphs(
     Numeric :x($x0) = 0e0,
     Numeric :y($y0) = 0e0,
